# ds3231-rs

./: Cargo.toml  README.md
src/: lib.rs
